# newsfax

./: .gitignore
api/: API_README.md  README.md  api.py  env.template  fact_checker.py  hello.py  pyproject.toml  run.py  test_factcheck.py  test_integration.py
extension/: EXTENSION_README.md  manifest.json  package.json  pnpm-lock.yaml  test.html  vite.config.ts
extension/src/: background.js  content.css  content.tsx  types.ts
