[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.32.1",
    "pydantic>=2.10.0",
    "langchain>=0.3.26",
    "python-dotenv>=1.1.1",
    "openai>=1.93.0",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.5.1",
    "tavily-python>=0.7.9",
    "langchain-openai>=0.3.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

# Future dependencies for real implementation
# Add these when implementing actual functionality:
future = [
    "tavily-python>=0.7.9",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "newspaper3k>=0.2.8",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "redis>=5.0.0",
]

[tool.setuptools]
py-modules = ["hello", "api"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
